# GMM-Positions

./: .gitignore  .gitignore~  LICENSE  README.md  README.md~  gmm_clustering.py  gmm_shapes.py  gmm_shapes.py~  gmm_shapes_both.py  gmm_shapes_both.py~  gmm_shapes_uniform_library.py  gmm_shapes_uniform_library.py~  gmm_shapes_weighted.py  gmm_shapes_weighted.py~  gmm_shapes_weighted_library.py  pyproject.toml  pyproject.toml~  requirements.txt~  setup.cfg  setup.py  setup.py~  traj_tools.py  traj_tools.py~
examples/beaded_helix_example/: cluster_beaded_helix.ipynb  helix_folding_eps6.0.dcd
examples/beaded_helix_example/.ipynb_checkpoints/: cluster_beaded_helix-checkpoint.ipynb
examples/beaded_helix_example/run_files/: run_helix_clustering_example.sh  run_helix_plumed.lmp  trajectory_polymer_unique_eps6.0_1.lammpsdata
examples/trpcage/: .trp-cage-2jof_350K.stepid10150000000.every1ns.nowater.align.xtc_offsets.npz  trp-cage-2jof_350K.run.3650000000.part0146.nowater.gro
examples/trpcage/.ipynb_checkpoints/: trpcage_shape_gmm_cluster_scan-checkpoint.ipynb
src/: .gmm_shapes.py (Martin’s MacBook Pro's conflicted copy 2021-10-28).swp  gmm_shapes.py  gmm_shapes.py~  gmm_shapes_weighted_library.py  gmm_shapes_weighted_library.py~  kmeans_shapes.py  traj_tools.py  traj_tools.py~
src/shapeGMM/: ._traj_tools.py.swp  _kmeans_shapes.py  _traj_tools.py  gmm_shapes.py
src/shapeGMM.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/size_and_shape_GMM_mccullaghlab.egg-info/: PKG-INFO  SOURCES.txt
