[metadata]
name = size-and-shape-GMM-mccullaghlab
version = 0.0.1
author = Martin McCullagh
author_email = martin.mccullagh@gmail.com
description = Gaussian Mixture Model clustering in size-and-shape space
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mccullaghlab/GMM-Positions
project_urls =
    Bug Tracker = https://github.com/mccullaghlab/GMM-Positions/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
